--- a/datawarehouse/looker-studio.mdx
+++ b/datawarehouse/looker-studio.mdx
@@ -24,11 +24,6 @@ Chakra's Looker Studio connector allows you to create powerful visualizations an
   to the bottom and select "Build your own connector". Enter the following
   Deployment ID in the provided field: ```
   AKfycbyCvuGqvABcfe46rvgGfCTDzbJuORX14LQcVkx1CHy4LPSEr9TNWTQ5EtIN_guUuACBpw ```
-  <Note>
-    Access to this connector is limited during the development phase. If you
-    encounter an access error, please contact our team to be added to the
-    approved users list.
-  </Note>
 </Step>
 
 <Step title='Configure the Connection'>
@@ -37,12 +32,8 @@ Chakra's Looker Studio connector allows you to create powerful visualizations an
 </Step>
 
 <Step title='Enter Your SQL Query'>
-  Enter the SQL query you want to use for your dashboard. For example: ```sql
+  Enter the SQL query you want to use for your dashboard. For example: ```
   SELECT * FROM duckdb.main.unicorn ```
-  <Note>
-    If you're unsure what tables are available, you can first explore your data
-    in the [Worksheets](https://console.chakra.dev/worksheet) section.
-  </Note>
 </Step>
 
   <Step title='Create Your Report'>
