--- a/overview.mdx
+++ b/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the Chakra Docs!'
+description: 'Get started for free in under 60 seconds'
 icon: 'dharmachakra'
 ---
 
@@ -12,24 +12,17 @@ Chakra's **mission** is to organize the world's structured data.
 
 We **aim to provide** a fast, cost-efficient, and collaborative experience for data engineers, data scientists, and AI researchers to interact with the most important datasets.
 
-## Product Suite
-
-Learn more about what Chakra is building and how the products connect together.
-
-<img src='/images/system.svg' alt='System Architecture' subtitle='test' />
-
 <CardGroup cols={2}>
-  <Card title='Data Warehouse' icon='house' href='/datawarehouse/quick-start'>
-    The place to ingest, transform, and query your enterprise's key datasets.
+  <Card title='Quickstart' icon='play' href='/datawarehouse/quick-start'>
+    Get started with Chakra data warehouse in under 60 seconds.
   </Card>
-  <Card title='Data Marketplace' icon='code' href='/marketplace'>
-    The home for the most important datasets in the world, sitting atop the data
-    warehouse.
+  <Card title='Python SDK' icon='python' href='/datawarehouse/worksheet'>
+    Programmatically interact with Chakra using Python
   </Card>
-  <Card title='Data Scout' icon='screwdriver-wrench' href='/node'>
+  <Card title='Data Marketplace' icon='shop' href='/marketplace/introduction'>
+    Discover and share valuable datasets with the community
+  </Card>
+  <Card title='Data Scout' icon='screwdriver-wrench' href='/scout/introduction'>
     A Chrome extension to contribute to the open data marketplace.
-  </Card>
-  <Card title='API Docs' icon='code' href='/api-reference'>
-    Query and transform your warehouse and marketplace datasets programmatically
   </Card>
 </CardGroup>
