--- a/scout/faq.mdx
+++ b/scout/faq.mdx
@@ -4,4 +4,36 @@ description: 'Frequently Asked Questions'
 icon: 'square-question'
 ---
 
-<img src='/images/soon.png' alt='Data Scout illustration' />
+<Accordion title='What is Chakra?'>
+  The Web as Database - we capture public web traffic from our data scouts. This
+  public traffic allows us to build datasets in the Open Data Marketplace that
+  fulfill key enterprise needs.
+</Accordion>
+
+<Accordion title='Why should I contribute?'>
+  The web is open but extremely difficult for AI companies to navigate. It's
+  cost prohibitive and technically challenging for these organizations to gather
+  the data they need to run training and inference. Chakra organizes and
+  structures this data, and you as the end contributor can earn standing on the
+  leaderboard of the important mission of organizing the world's structured
+  data.
+</Accordion>
+
+<Accordion title='Does Chakra collect any private data?'>
+  No. Chakra only collects public data and all permissions for data mapping can
+  be configured explicitly in the setting page of the Chrome Extension. We
+  undergo complete security audits and all data that is captured is anonymized
+  and aggregated.
+</Accordion>
+
+<Accordion title='How do I get started?'>
+  Download the Extension and browse the web as your normally do. We use your
+  bandwidth to collect data that would otherwise be difficult to procure - climb
+  the leaderboard and earn rewards.
+</Accordion>
+
+<Accordion title='How can I use the data collected by mappers as an enterprise?'>
+  Check out our [data marketetplace](/marketplace/introduction). All of the
+  datasets collected by mappers are available for consumption in the data
+  warehouse, Python SDK, and REST APIs.
+</Accordion>
