add dune support documentation

--- a/scout/faq.mdx
+++ b/scout/faq.mdx
@@ -32,7 +32,7 @@ icon: 'square-question'
   the leaderboard and earn rewards.
 </Accordion>
 
-<Accordion title='How can I use the data collected by mappers as an enterprise?'>
+<Accordion title='How can I use mapped data as an enterprise?'>
   Check out our [data marketetplace](/marketplace/introduction). All of the
   datasets collected by mappers are available for consumption in the data
   warehouse, Python SDK, and REST APIs.
