--- a/datawarehouse/dune.mdx
+++ b/datawarehouse/dune.mdx
@@ -19,15 +19,19 @@ icon: 'circle-half-stroke'
 
 Chakra supports querying data from [Dune](https://dune.com/) natively in DuckDB, allowing users to analzye off-chain and on-chain data in one place.
 
-Example syntax:
+**Syntax**:
 
 ```
 SELECT * FROM @dune.[insert_query_id_here] LIMIT 10
 ```
 
+## Example Use-Case
+
 An example use-case: users can upload their own key datasets (like proprietary labels) and join them against Dune data directly in one unified experience.
 
 <img src='/images/dune-3.png' />
+
+## Getting Started
 
 <Steps>
   <Step title='Sign-Up'>
