--- a/datawarehouse/dune.mdx
+++ b/datawarehouse/dune.mdx
@@ -17,7 +17,7 @@ icon: 'circle-half-stroke'
 
 ## Intro
 
-Chakra supports querying data from [Dune](https://dune.com/) natively in DuckDB, allowing users to analzye off-chain and on-chain data in one place.
+Chakra supports querying data from [Dune](https://dune.com/) natively in DuckDB, allowing users to analyze off-chain and on-chain data in one place.
 
 **Syntax**:
 
