--- a/datawarehouse/replication.mdx
+++ b/datawarehouse/replication.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Replication'
-description: 'Data Transfer at Scale'
+description: 'Real-Time Data Transfer, Built for Scale'
 icon: 'database'
 ---
 
