--- a/scout/faq.mdx
+++ b/scout/faq.mdx
@@ -32,8 +32,8 @@ icon: 'square-question'
   the leaderboard and earn rewards.
 </Accordion>
 
-<Accordion title='How can I use mapped data as an enterprise?'>
+<Accordion title='How can I access mapped data as an enterprise?'>
   Check out our [data marketetplace](/marketplace/introduction). All of the
-  datasets collected by mappers are available for consumption in the data
+  datasets collected by scouts are available for consumption in the data
   warehouse, Python SDK, and REST APIs.
 </Accordion>
