update arch diagram

--- a/datawarehouse/architecture.mdx
+++ b/datawarehouse/architecture.mdx
@@ -4,7 +4,7 @@ description: ''
 icon: 'sitemap'
 ---
 
-Check out our blog article on our [Flock Architecture](https://www.chakra.dev/writing/flock-architecture) for a detailed explanation of how the pieces fit together.
+Check out our blog article on our [FLOCK Architecture](https://www.chakra.dev/writing/flock-architecture) for a detailed explanation of how the pieces fit together.
 
 <img
   src='https://cdn.prod.website-files.com/674004db86b69c586d160bea/67af7a421269b73894557d13_flock2.png'
