--- a/products.mdx
+++ b/products.mdx
@@ -6,7 +6,7 @@ icon: 'globe'
 
 Check out our blog article on our [Masterplan](https://www.chakra.dev/writing/introducing-chakra) for a detailed explanation of our mission, value, and goals.
 
-<img src='/images/system.svg' alt='System Architecture' subtitle='test' />
+<img src='/images/system.png' alt='System Architecture' subtitle='test' />
 
 <CardGroup cols={2}>
   <Card title='Data Warehouse' icon='house' href='/datawarehouse/quick-start'>
