update scout page

--- a/scout/faq.mdx
+++ b/scout/faq.mdx
@@ -5,31 +5,29 @@ icon: 'square-question'
 ---
 
 <Accordion title='What is Chakra?'>
-  The Web as Database - we capture public web traffic from our data scouts. This
-  public traffic allows us to build datasets in the Open Data Marketplace that
-  fulfill key enterprise needs.
+  The **web, reimagined as a permissionless database**. <br />
+  We capture public web traffic from our data scouts. This public traffic allows
+  us to build datasets in the Open Data Marketplace that fulfill key enterprise needs.
 </Accordion>
 
 <Accordion title='Why should I contribute?'>
   The web is open but extremely difficult for AI companies to navigate. It's
   cost prohibitive and technically challenging for these organizations to gather
-  the data they need to run training and inference. Chakra organizes and
-  structures this data, and you as the end contributor can earn standing on the
-  leaderboard of the important mission of organizing the world's structured
-  data.
+  the data they need to run training and inference. <br />
+  Chakra is building the **read layer for the internet**. We **organize** and **structure**
+  this data, and you as the end contributor can earn standing on the leaderboard
+  for the important mission of organizing the world's structured data.
 </Accordion>
 
 <Accordion title='Does Chakra collect any private data?'>
-  No. Chakra only collects public data and all permissions for data mapping can
-  be configured explicitly in the setting page of the Chrome Extension. We
-  undergo complete security audits and all data that is captured is anonymized
-  and aggregated.
+  **No** - Chakra never collects private data. <br />
+  Chakra only collects public data and all permissions for data mapping can be configured
+  explicitly in the setting page of the Extension. We undergo complete security audits
+  and all data that is captured is anonymized and aggregated.
 </Accordion>
 
 <Accordion title='How do I get started?'>
-  Download the Extension and browse the web as your normally do. We use your
-  bandwidth to collect data that would otherwise be difficult to procure - climb
-  the leaderboard and earn rewards.
+  Download the **Extension** and browse the web as your normally do.
 </Accordion>
 
 <Accordion title='How can I access mapped data as an enterprise?'>
