--- a/scout/introduction.mdx
+++ b/scout/introduction.mdx
@@ -1,20 +1,26 @@
 ---
 title: 'Introduction'
-description: 'Contribute to the open data marketplace and earn rewards'
+description: 'Turn the web into a permissionless database.'
 icon: 'globe'
 ---
 
-<Note>
-  Join our [Discord](https://discord.gg/chakra-ai) to stay updated on the Data
-  Scout launch and be first in line for early access.
-</Note>
-<img src='/images/soon.png' alt='Data Scout illustration' />
+<img src='/images/scout.png' alt='Data Scout illustration' />
 
-## What to Expect
+### What is Scout?
+
+At Chakra, we're reimagining the web as a permissionless database. To that end, Scout - the decentralized indexing of the web - represents the final step in [our journey](/products).
+
+With Scout, we capture public web traffic, allowing us to build datasets in the open data marketplace that fulfill key enterprise needs.
+
+### How do I get started?
+
+Download the [Extension](https://app.chakra.dev/). Browse the internet as your normally would and climb the leaderboard.
+
+### What to Expect
 
 <CardGroup cols={2}>
-  <Card title='Passive Income' icon='money-bill'>
-    Earn rewards for contributing valuable data to the ecosystem
+  <Card title='Contribute' icon='globe'>
+    Passively map the web and contribute to the open data marketplace
   </Card>
   <Card title='Privacy Controls' icon='shield'>
     Full ownership and opt-in controls for your data
