--- a/marketplace/introduction.mdx
+++ b/marketplace/introduction.mdx
@@ -24,5 +24,5 @@ With the Chakra data marketplace, you can go from CSV to data share in **\<60 se
 | [Manage](https://console.chakra.dev/marketplace) | View and manage your subscriptions |
 
 <Card title='Featured Data Shares' icon='database' href='/marketplace/verified'>
-  Verified data shares from partners.
+  Browse verified data shares from partners. Each share now has its own page.
 </Card>
