--- a/marketplace/verified.mdx
+++ b/marketplace/verified.mdx
@@ -4,221 +4,24 @@ description: 'Verified data from partners'
 icon: 'database'
 ---
 
-## Twitter
-
-Posts, likes, retweets, and metadata from all collected public tweets and profiles.
-
-This dataset is structured into two main tables: **profiles** and **tweets**.
-
-The **profiles** table contains information about Twitter user profiles, with the following columns:
-
-| Column Name           | Description                                    |
-| --------------------- | ---------------------------------------------- |
-| collect_timestamp     | Timestamp when the profile data was collected  |
-| id                    | Unique identifier for the Twitter user profile |
-| name                  | Name of the Twitter user                       |
-| display_name          | Display name of the Twitter user               |
-| bio                   | Biography of the Twitter user                  |
-| is_blue_verified      | Indicates if the user is blue verified         |
-| created_timestamp     | Timestamp when the Twitter account was created |
-| location              | Location of the Twitter user                   |
-| profession_type       | Type of profession of the Twitter user         |
-| profession_categories | Categories related to the user's profession    |
-| following             | Number of accounts the user is following       |
-| followers             | Number of followers the user has               |
-| tweets_count          | Total number of tweets made by the user        |
-| links                 | Links associated with the Twitter user         |
-| banner_image_url      | URL of the user's banner image                 |
-| profile_image_url     | URL of the user's profile image                |
-| pinned_tweet_ids      | IDs of tweets pinned by the user               |
-
-The **tweets** table contains information about tweets made by users, with the following columns:
-
-| Column Name           | Description                                       |
-| --------------------- | ------------------------------------------------- |
-| collect_timestamp     | Timestamp when the tweet data was collected       |
-| id                    | Unique identifier for the tweet                   |
-| poster_id             | ID of the user who posted the tweet               |
-| text                  | Content of the tweet                              |
-| timestamp             | Timestamp when the tweet was posted               |
-| is_note               | Indicates if the tweet is a note                  |
-| images                | Images associated with the tweet                  |
-| videos                | Videos associated with the tweet                  |
-| hashtags              | Hashtags used in the tweet                        |
-| tagged_users          | Users tagged in the tweet                         |
-| replies               | Number of replies to the tweet                    |
-| reposts               | Number of times the tweet has been reposted       |
-| likes                 | Number of likes the tweet has received            |
-| views                 | Number of views the tweet has received            |
-| quotes                | Number of quotes of the tweet                     |
-| bookmarks             | Number of bookmarks of the tweet                  |
-| quote_parent_id       | ID of the parent tweet if this tweet is a quote   |
-| quote_poster_id       | ID of the user who posted the parent tweet        |
-| reply_conversation_id | ID of the conversation this tweet is part of      |
-| reply_parent_id       | ID of the parent tweet in the reply conversation  |
-| reply_poster_id       | ID of the user who posted the parent tweet        |
-| retweet_parent_id     | ID of the parent tweet if this tweet is a retweet |
-| retweet_poster_id     | ID of the user who posted the parent tweet        |
-
-### Utilities for the Twitter dataset
-
-1. Tweet Id to URL: https://twitter.com/i/web/status/{tweetId}
-2. Profile Id to URL: https://twitter.com/intent/user?user_id={userId}
-
----
-
-## CoinGecko
-
-Historical and real-time data for all assets in the CoinGecko universe. This dataset is structured into two main tables: **history** and **projects**.
-
-The **history** table contains historical data for cryptocurrencies, with the following columns:
-
-| Column Name  | Description                              |
-| ------------ | ---------------------------------------- |
-| COINGECKO_ID | Unique identifier for the cryptocurrency |
-| DATE         | Date of the recorded data                |
-| FDMC         | Fully Diluted Market Cap                 |
-| H24_VOLUME   | 24-hour trading volume                   |
-| MARKET_CAP   | Market capitalization                    |
-| PRICE        | Price of the cryptocurrency              |
-| SYMBOL       | Symbol of the cryptocurrency             |
-
-The **projects** table provides detailed information about cryptocurrency projects, with the following columns:
-
-| Column Name                      | Description                                            |
-| -------------------------------- | ------------------------------------------------------ |
-| CIRCULATING_SUPPLY               | Current circulating supply of the cryptocurrency       |
-| COINGECKO_ID                     | Unique identifier for the cryptocurrency               |
-| FDMC                             | Fully Diluted Market Cap                               |
-| HIGH_24H                         | Highest price in the last 24 hours                     |
-| LOW_24H                          | Lowest price in the last 24 hours                      |
-| MARKET_CAP                       | Market capitalization                                  |
-| MARKET_CAP_CHANGE_24H            | Change in market cap over the last 24 hours            |
-| MARKET_CAP_CHANGE_PERCENTAGE_24H | Percentage change in market cap over the last 24 hours |
-| MAX_SUPPLY                       | Maximum supply of the cryptocurrency                   |
-| NAME                             | Name of the cryptocurrency project                     |
-| PRICE                            | Current price of the cryptocurrency                    |
-| PRICE_ATH                        | All-time high price                                    |
-| PRICE_ATH_CHANGE_PERCENTAGE      | Percentage change from all-time high price             |
-| PRICE_ATH_DATE                   | Date of the all-time high price                        |
-| PRICE_ATL                        | All-time low price                                     |
-| PRICE_ATL_CHANGE_PERCENTAGE      | Percentage change from all-time low price              |
-| PRICE_ATL_DATE                   | Date of the all-time low price                         |
-| PRICE_CHANGE_24H                 | Price change over the last 24 hours                    |
-| PRICE_CHANGE_PERCENTAGE_24H      | Percentage change in price over the last 24 hours      |
-| SYMBOL                           | Symbol of the cryptocurrency                           |
-| TOTAL_SUPPLY                     | Total supply of the cryptocurrency                     |
-| VOLUME_24H                       | 24-hour trading volume                                 |
-
----
-
-## DePIN Ninja
-
-Contains project characteristics, financial metrics, and historical revenue data for all DePIN.Ninja datasets.
-
-This dataset is structured into two main tables: **projects** and **historical_revenue**.
-
-The `projects` table provides information about different projects, including their category, chain, and financial metrics.
-
-| Column Name | Description                                                                |
-| ----------- | -------------------------------------------------------------------------- |
-| `projectId` | Unique identifier for the project.                                         |
-| `name`      | Name of the project.                                                       |
-| `category`  | Category of the project (e.g., AI, COMPUTE, SENSORS, etc.).                |
-| `chain`     | Blockchain network on which the project operates (e.g., ETHEREUM, SOLANA). |
-| `arr`       | Annual Recurring Revenue (ARR) of the project.                             |
-| `mrr`       | Monthly Recurring Revenue (MRR) of the project.                            |
-| `createdAt` | Date when the project was created.                                         |
-
-| Project ID | Name    | Category | Chain    | ARR       | MRR      | Created At |
-| ---------- | ------- | -------- | -------- | --------- | -------- | ---------- |
-| wmad1s     | PAAL AI | AI       | ETHEREUM | 1846345   | 1005192  | 2025-01-23 |
-| 2a1uk3     | Virtual | AI       | BASE     | 231378903 | 16065510 | 2025-01-23 |
-| ...        | ...     | ...      | ...      | ...       | ...      | ...        |
-
-The `historical_revenue` table contains historical revenue data for various projects, allowing for analysis of revenue trends over time.
-
-| Column Name | Description                                             |
-| ----------- | ------------------------------------------------------- |
-| `createdAt` | Timestamp of when the revenue data was recorded.        |
-| `date`      | Specific date for the revenue data.                     |
-| `name`      | Name of the project associated with the revenue data.   |
-| `projectId` | Unique identifier for the project.                      |
-| `revenue`   | Revenue generated by the project on the specified date. |
-
-| Created At | Date       | Name    | Project ID | Revenue |
-| ---------- | ---------- | ------- | ---------- | ------- |
-| 2025-01-23 | 2025-01-01 | PAAL AI | wmad1s     | 50000   |
-| 2025-01-23 | 2025-01-01 | Virtual | 2a1uk3     | 75000   |
-| ...        | ...        | ...     | ...        | ...     |
-
-This dataset can be used for various analyses, including:
-
-- Financial performance evaluation of DePIN projects.
-- Trend analysis of revenue over time.
-- Comparison of projects across different categories and chains.
-
----
-
-## Slice Analytics
-
-Contains user counts and scores of quality users for top DEXs, NFT exchange, and Perp DEX platforms.
-
-It utilizes Slice's proprietary methodology for segmenting users into quality groups.
-
-Slice builds a score for each wallet based on life-time history of value, historic onchain volume, and fees paid
-
-This dataset is structured into three main tables: **dex_trader_aggregates**, **nft_trader_aggregates**, and **perps_trader_aggregates**.
-
-The **dex_trader_aggregates** table contains aggregated data for decentralized exchange traders, with the following columns:
-
-| Column Name   | Description                                |
-| ------------- | ------------------------------------------ |
-| avg_score     | Average score of the traders               |
-| blockchain    | Blockchain platform used                   |
-| id            | Unique identifier for the record           |
-| last_modified | Timestamp of the last modification         |
-| project       | Name of the project                        |
-| user_count    | Total number of users                      |
-| users_over_50 | Number of users over 50 score user quality |
-| users_over_60 | Number of users over 60 score user quality |
-| users_over_70 | Number of users over 70 score user quality |
-| users_over_80 | Number of users over 80 score user quality |
-| users_over_90 | Number of users over 90 score user quality |
-| users_over_95 | Number of users over 95 score user quality |
-
-The **nft_trader_aggregates** table provides aggregated data for NFT traders, with the following columns:
-
-| Column Name   | Description                                |
-| ------------- | ------------------------------------------ |
-| avg_score     | Average score of the traders               |
-| blockchain    | Blockchain platform used                   |
-| id            | Unique identifier for the record           |
-| last_modified | Timestamp of the last modification         |
-| project       | Name of the project                        |
-| user_count    | Total number of users                      |
-| users_over_50 | Number of users over 50 score user quality |
-| users_over_60 | Number of users over 60 score user quality |
-| users_over_70 | Number of users over 70 score user quality |
-| users_over_80 | Number of users over 80 score user quality |
-| users_over_90 | Number of users over 90 score user quality |
-| users_over_95 | Number of users over 95 score user quality |
-
-The **perps_trader_aggregates** table contains aggregated data for perpetual contract traders, with the following columns:
-
-| Column Name   | Description                                |
-| ------------- | ------------------------------------------ |
-| avg_score     | Average score of the traders               |
-| blockchain    | Blockchain platform used                   |
-| id            | Unique identifier for the record           |
-| last_modified | Timestamp of the last modification         |
-| project       | Name of the project                        |
-| user_count    | Total number of users                      |
-| users_over_50 | Number of users over 50 score user quality |
-| users_over_60 | Number of users over 60 score user quality |
-| users_over_70 | Number of users over 70 score user quality |
-| users_over_80 | Number of users over 80 score user quality |
-| users_over_90 | Number of users over 90 score user quality |
-| users_over_95 | Number of users over 95 score user quality |
-
-This dataset is ideal for analyzing _quality_ users. DAU (daily active users) is an incomplete metric that is easily botted - this dataset provides more nuance and can allow researchers to understand the quality of the composing users.
+<CardGroup cols={2}>
+  <Card title='Twitter' icon='X' href='/marketplace/twitter'>
+    Posts, likes, retweets, and metadata from all collected public tweets and
+    profiles.
+  </Card>
+  <Card title='CoinGecko' icon='coins' href='/marketplace/coingecko'>
+    Historical and real-time data for all assets in the CoinGecko universe.
+  </Card>
+  <Card title='DePIN Ninja' icon='network-wired' href='/marketplace/depinninja'>
+    Project characteristics, financial metrics, and historical revenue data for
+    all DePIN.Ninja datasets.
+  </Card>
+  <Card
+    title='Slice Analytics'
+    icon='chart-line'
+    href='/marketplace/slice-analytics'
+  >
+    User counts and scores of quality users for top DEXs, NFT exchange, and Perp
+    DEX platforms.
+  </Card>
+</CardGroup>
