--- a/scout/faq.mdx
+++ b/scout/faq.mdx
@@ -27,7 +27,9 @@ icon: 'square-question'
 </Accordion>
 
 <Accordion title='How do I get started?'>
-  Download the **Extension** and browse the web as your normally do.
+  Download the [Extension](https://app.chakra.dev/) and browse the web as your
+  normally do. Your "events collected" will start populating as your navigate
+  supported websites.
 </Accordion>
 
 <Accordion title='How can I access mapped data as an enterprise?'>
