update scout docs page

--- a/scout/faq.mdx
+++ b/scout/faq.mdx
@@ -32,6 +32,19 @@ icon: 'square-question'
   supported websites.
 </Accordion>
 
+<Accordion title='What are bits? What are events?'>
+  Bits are rewards for mapping data. They are currently not live, but do stay
+  tuned for updates on our [Twitter / X](https://twitter.com/chakra_ai). <br />
+  Events are unique pieces of data collected like a tweet or an individual profile.
+  You can track your events collected on the [leaderboard](https://app.chakra.dev/).
+</Accordion>
+
+<Accordion title='Why are my events not going up?'>
+  To collect events, you must be navigating supported websites. <br /> Today,
+  this only includes X / Twitter, but over the coming months, we plan to support
+  a variety of data assets.
+</Accordion>
+
 <Accordion title='How can I access mapped data as an enterprise?'>
   Check out our [data marketetplace](/marketplace/introduction). All of the
   datasets collected by scouts are available for consumption in the data
