subnet nomenclature added

--- a/overview.mdx
+++ b/overview.mdx
@@ -22,7 +22,11 @@ We **aim to provide** a fast, cost-efficient, and collaborative experience for d
   <Card title='Data Marketplace' icon='shop' href='/marketplace/introduction'>
     Discover and share valuable datasets with the community
   </Card>
-  <Card title='Data Scout' icon='screwdriver-wrench' href='/scout/introduction'>
+  <Card
+    title='Data Scout - Subnet 0'
+    icon='screwdriver-wrench'
+    href='/scout/introduction'
+  >
     A Chrome extension to contribute to the open data marketplace.
   </Card>
 </CardGroup>
