--- a/products.mdx
+++ b/products.mdx
@@ -15,7 +15,11 @@ Check out our blog article on our [Masterplan](https://www.chakra.dev/writing/in
   <Card title='Data Marketplace' icon='code' href='/marketplace'>
     Access the most important datasets, sitting atop the data warehouse.
   </Card>
-  <Card title='Data Scout' icon='screwdriver-wrench' href='/scout/introduction'>
+  <Card
+    title='Data Scout - Subnet 0'
+    icon='screwdriver-wrench'
+    href='/scout/introduction'
+  >
     A Chrome extension to contribute to the open data marketplace.
   </Card>
   <Card title='API Docs' icon='code' href='/api-reference'>
