--- a/scout/faq.mdx
+++ b/scout/faq.mdx
@@ -41,8 +41,8 @@ icon: 'square-question'
 
 <Accordion title='Why are my events not going up?'>
   To collect events, you must be navigating supported websites. <br /> Today,
-  this only includes X / Twitter, but over the coming months, we plan to support
-  a variety of data assets.
+  this only includes X / Twitter and LinkedIn, but over the coming months, we
+  plan to support a variety of data assets.
 </Accordion>
 
 <Accordion title='How can I access mapped data as an enterprise?'>
