--- a/marketplace/verified.mdx
+++ b/marketplace/verified.mdx
@@ -9,6 +9,9 @@ icon: 'database'
     Posts, likes, retweets, and metadata from all collected public tweets and
     profiles.
   </Card>
+  <Card title='LinkedIn' icon='linkedin' href='/marketplace/linkedin'>
+    Candidate and company LinkedIn profiles.
+  </Card>
   <Card title='CoinGecko' icon='coins' href='/marketplace/coingecko'>
     Historical and real-time data for all assets in the CoinGecko universe.
   </Card>
