--- a/overview.mdx
+++ b/overview.mdx
@@ -23,10 +23,13 @@ We **aim to provide** a fast, cost-efficient, and collaborative experience for d
     Discover and share valuable datasets with the community
   </Card>
   <Card
-    title='Data Scout - Subnet 0'
+    title='Scout - Subnet 0'
     icon='screwdriver-wrench'
     href='/scout/introduction'
   >
-    A Chrome extension to contribute to the open data marketplace.
+    Contribute textual corpuses to the data marketplace.
+  </Card>
+  <Card title='Pango - Subnet 1' icon='pencil' href='/pango/introduction'>
+    Contribute computer use data to the data marketplace.
   </Card>
 </CardGroup>
