--- a/scout/introduction.mdx
+++ b/scout/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Introduction'
-description: 'Turn the web into a permissionless database.'
+description: "Transform the world's data into a permissionless database."
 icon: 'globe'
 ---
 
@@ -8,7 +8,7 @@ icon: 'globe'
 
 ### What is Scout?
 
-At Chakra, we're reimagining the web as a permissionless database. To that end, Scout - the decentralized indexing of the web - represents the next step in [our journey](/products).
+At Chakra, we're transforming the world's data into a permissionless database. To that end, Scout - the decentralized indexing of the web - represents the next step in [our journey](/products).
 
 With Scout, we capture public web traffic, allowing us to build datasets in the open data marketplace that fulfill key enterprise needs.
 
