--- a/products.mdx
+++ b/products.mdx
@@ -16,11 +16,14 @@ Check out our blog article on our [Masterplan](https://www.chakra.dev/writing/in
     Access the most important datasets, sitting atop the data warehouse.
   </Card>
   <Card
-    title='Data Scout - Subnet 0'
+    title='Scout - Subnet 0'
     icon='screwdriver-wrench'
     href='/scout/introduction'
   >
-    A Chrome extension to contribute to the open data marketplace.
+    Contribute textual corpuses to the data marketplace.
+  </Card>
+  <Card title='Pango - Subnet 1' icon='pencil' href='/pango/introduction'>
+    Contribute computer use data to the data marketplace.
   </Card>
   <Card title='API Docs' icon='code' href='/api-reference'>
     Query and transform your warehouse and marketplace datasets programmatically
