massive docs uplift

--- a/marketplace/twitter.mdx
+++ b/marketplace/twitter.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Twitter'
-description: 'Posts, likes, retweets, and metadata from all collected public tweets and profiles.'
+description: 'Posts, likes, retweets, and metadata from collected public tweets and profiles.'
 icon: 'x'
 ---
 
