--- a/marketplace/verified.mdx
+++ b/marketplace/verified.mdx
@@ -6,11 +6,17 @@ icon: 'database'
 
 <CardGroup cols={2}>
   <Card title='Twitter' icon='X' href='/marketplace/twitter'>
-    Posts, likes, retweets, and metadata from all collected public tweets and
+    Posts, likes, retweets, and metadata from collected public tweets and
     profiles.
   </Card>
-  <Card title='LinkedIn' icon='linkedin' href='/marketplace/linkedin'>
+  <Card title='LinkedIn' icon='linkedin' href='/marketplace/reddit'>
     Candidate and company LinkedIn profiles.
+  </Card>
+  <Card title='Reddit' icon='Reddit' href='/marketplace/linkedin'>
+    Posts, comments, and subbreddits.
+  </Card>
+  <Card title='Pango' icon='Computer' href='/pango/introduction'>
+    The largest computer use trajectory dataset on market.
   </Card>
   <Card title='CoinGecko' icon='coins' href='/marketplace/coingecko'>
     Historical and real-time data for all assets in the CoinGecko universe.
