--- a/overview.mdx
+++ b/overview.mdx
@@ -8,7 +8,7 @@ icon: 'dharmachakra'
 
 ## Mission
 
-Chakra's **mission** is to organize the world's structured data.
+Chakra's **mission** is to encode human taste into intelligence.
 
 We **aim to provide** a fast, cost-efficient, and collaborative experience for data engineers, data scientists, and AI researchers to interact with the most important datasets.
 
@@ -30,6 +30,6 @@ We **aim to provide** a fast, cost-efficient, and collaborative experience for d
     Contribute textual corpuses to the data marketplace.
   </Card>
   <Card title='Pango - Subnet 1' icon='pencil' href='/pango/introduction'>
-    Contribute computer use data to the data marketplace.
+    Contribute computer use trajectory data to the data marketplace.
   </Card>
 </CardGroup>
