--- a/products.mdx
+++ b/products.mdx
@@ -4,8 +4,6 @@ description: 'Learn more about what Chakra is building'
 icon: 'globe'
 ---
 
-Check out our blog article on our [Masterplan](https://www.chakra.dev/writing/introducing-chakra) for a detailed explanation of our mission, value, and goals.
-
 <img src='/images/system.png' alt='System Architecture' subtitle='test' />
 
 <CardGroup cols={2}>
@@ -23,7 +21,7 @@ Check out our blog article on our [Masterplan](https://www.chakra.dev/writing/in
     Contribute textual corpuses to the data marketplace.
   </Card>
   <Card title='Pango - Subnet 1' icon='pencil' href='/pango/introduction'>
-    Contribute computer use data to the data marketplace.
+    Contribute computer use trajectory data to the data marketplace.
   </Card>
   <Card title='API Docs' icon='code' href='/api-reference'>
     Query and transform your warehouse and marketplace datasets programmatically
