--- a/scout/faq.mdx
+++ b/scout/faq.mdx
@@ -16,7 +16,7 @@ icon: 'square-question'
   the data they need to run training and inference. <br />
   Chakra is building the **read layer for the internet**. We **organize** and **structure**
   this data, and you as the end contributor can earn standing on the leaderboard
-  for the important mission of organizing the world's structured data.
+  for capturing & organizing the world's structured data.
 </Accordion>
 
 <Accordion title='Does Chakra collect any private data?'>
