--- a/marketplace/twitter.mdx
+++ b/marketplace/twitter.mdx
@@ -10,51 +10,67 @@ The **profiles** table contains information about Twitter user profiles, with th
 
 | Column Name           | Description                                    |
 | --------------------- | ---------------------------------------------- |
-| collect_timestamp     | Timestamp when the profile data was collected  |
-| id                    | Unique identifier for the Twitter user profile |
-| name                  | Name of the Twitter user                       |
-| display_name          | Display name of the Twitter user               |
-| bio                   | Biography of the Twitter user                  |
-| is_blue_verified      | Indicates if the user is blue verified         |
-| created_timestamp     | Timestamp when the Twitter account was created |
-| location              | Location of the Twitter user                   |
-| profession_type       | Type of profession of the Twitter user         |
-| profession_categories | Categories related to the user's profession    |
-| following             | Number of accounts the user is following       |
-| followers             | Number of followers the user has               |
-| tweets_count          | Total number of tweets made by the user        |
-| links                 | Links associated with the Twitter user         |
 | banner_image_url      | URL of the user's banner image                 |
-| profile_image_url     | URL of the user's profile image                |
+| bio                   | Biography of the Twitter user                  |
+| created_timestamp     | Timestamp when the Twitter account was created |
+| display_name          | Display name of the Twitter user               |
+| followers_count       | Number of followers the user has               |
+| following_count       | Number of accounts the user is following       |
+| id                    | Unique identifier for the Twitter user profile |
+| is_blue_verified      | Indicates if the user is blue verified         |
+| links                 | Links associated with the Twitter user         |
+| location              | Location of the Twitter user                   |
+| name                  | Name of the Twitter user                       |
 | pinned_tweet_ids      | IDs of tweets pinned by the user               |
+| profession_categories | Categories related to the user's profession    |
+| profession_type       | Type of profession of the Twitter user         |
+| profile_image_url     | URL of the user's profile image                |
+| tweets_count          | Total number of tweets made by the user        |
 
 The **tweets** table contains information about tweets made by users, with the following columns:
 
-| Column Name           | Description                                       |
-| --------------------- | ------------------------------------------------- |
-| collect_timestamp     | Timestamp when the tweet data was collected       |
-| id                    | Unique identifier for the tweet                   |
-| poster_id             | ID of the user who posted the tweet               |
-| text                  | Content of the tweet                              |
-| timestamp             | Timestamp when the tweet was posted               |
-| is_note               | Indicates if the tweet is a note                  |
-| images                | Images associated with the tweet                  |
-| videos                | Videos associated with the tweet                  |
-| hashtags              | Hashtags used in the tweet                        |
-| tagged_users          | Users tagged in the tweet                         |
-| replies               | Number of replies to the tweet                    |
-| reposts               | Number of times the tweet has been reposted       |
-| likes                 | Number of likes the tweet has received            |
-| views                 | Number of views the tweet has received            |
-| quotes                | Number of quotes of the tweet                     |
-| bookmarks             | Number of bookmarks of the tweet                  |
-| quote_parent_id       | ID of the parent tweet if this tweet is a quote   |
-| quote_poster_id       | ID of the user who posted the parent tweet        |
-| reply_conversation_id | ID of the conversation this tweet is part of      |
-| reply_parent_id       | ID of the parent tweet in the reply conversation  |
-| reply_poster_id       | ID of the user who posted the parent tweet        |
-| retweet_parent_id     | ID of the parent tweet if this tweet is a retweet |
-| retweet_poster_id     | ID of the user who posted the parent tweet        |
+| Column Name             | Description                                       |
+| ----------------------- | ------------------------------------------------- |
+| article_cover_image_url | URL of the article's cover image                  |
+| article_id              | ID of the article if the tweet links to one       |
+| article_preview_text    | Preview text of the linked article                |
+| article_title           | Title of the linked article                       |
+| bookmarks               | Number of bookmarks of the tweet                  |
+| hashtags                | Hashtags used in the tweet                        |
+| id                      | Unique identifier for the tweet                   |
+| images                  | Images associated with the tweet                  |
+| is_note                 | Indicates if the tweet is a note                  |
+| likes                   | Number of likes the tweet has received            |
+| poster_id               | ID of the user who posted the tweet               |
+| quotes                  | Number of quotes of the tweet                     |
+| quote_parent_id         | ID of the parent tweet if this tweet is a quote   |
+| quote_poster_id         | ID of the user who posted the parent tweet        |
+| replies                 | Number of replies to the tweet                    |
+| reply_conversation_id   | ID of the conversation this tweet is part of      |
+| reply_parent_id         | ID of the parent tweet in the reply conversation  |
+| reply_poster_id         | ID of the user who posted the parent tweet        |
+| reposts                 | Number of times the tweet has been reposted       |
+| retweet_parent_id       | ID of the parent tweet if this tweet is a retweet |
+| retweet_poster_id       | ID of the user who posted the parent tweet        |
+| tagged_users            | Users tagged in the tweet                         |
+| text                    | Content of the tweet                              |
+| timestamp               | Timestamp when the tweet was posted               |
+| videos                  | Videos associated with the tweet                  |
+| views                   | Number of views the tweet has received            |
+
+## Enterprise Only
+
+The **profile_timeseries** table contains timeseries data for Twitter profile statistics:
+
+| Column Name     | Description                                           |
+| --------------- | ----------------------------------------------------- |
+| id              | Unique identifier for the Twitter user profile        |
+| timestamp       | Timestamp when the profile stats snapshot was taken   |
+| following_count | Number of accounts the user is following at this time |
+| followers_count | Number of followers the user has at this time         |
+| tweets_count    | Total number of tweets made by the user at this time  |
+
+Each row represents a snapshot of a profile's statistics at a specific timestamp. The data is updated periodically at the same time as the profiles table and is ordered by timestamp for optimal query performance when using timestamp in query conditionals.
 
 ### Utilities for the Twitter dataset
 
